tests/reject/stat_before_decl.ul
void main() {
     if (true) {
          print "hello";
     }

     int x;
}